fix bug #46323 (compilation of simplexml for NetWare breaks)